[project]
name = "epp-sla-ai-bi-agent"
version = "0.1.0"
description = "EPP SLA AI Reporter - Natural Language to Business Intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "sqlparse>=0.5.5",
    "streamlit>=1.57.0",
]

# -----------------------------
# Build system
# -----------------------------
[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

# -----------------------------
# Tooling (optional but useful)
# -----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
where = ["src"]
